tests/ui/trait-fn.stderr
error: expected curly braces
 --> tests/ui/trait-fn.rs:5:11
  |
5 |     fn f();
  |           ^
